[package]
authors = ["Konstantin Stepanov <konstantin.stepanov@adform.com>"]
description = "Native Rust passwd and group files parser"
name = "parsswd"
version = "0.1.0"
build = "build.rs"
repository = "https://github.com/kstep/parsswd"
readme = "README.md"
license = "MIT/Apache-2.0"

[build-dependencies]
skeptic = "0.4.0"

[dependencies]

[dev-dependencies]
skeptic = "0.4.0"
